bindings: Explicitly pass ValueType to toImplArray

This makes toImplArray use correct NativeValueTraits<T>.

BUG=707632

Review-Url: https://codereview.chromium.org/2791133002
Cr-Commit-Position: refs/heads/master@{#462346}

Former-commit-id: 0f01bbd2bd685d4987f04347e6403c3e2d13e0c9