third_party/WebKit/Source/bindings/tests/results/core/LongSequenceOrEvent.cpp
@@ -76,7 +76,7 @@ void V8LongSequenceOrEvent::toImpl(v8::Isolate* isolate, v8::Local<v8::Value> v8
   }
 
   if (v8Value->IsArray()) {
-    Vector<int32_t> cppValue = toImplArray<Vector<int32_t>>(v8Value, 0, isolate, exceptionState);
+    Vector<int32_t> cppValue = toImplArray<Vector<int32_t>, IDLLong>(v8Value, 0, isolate, exceptionState);
     if (exceptionState.hadException())
       return;
     impl.setLongSequence(cppValue);
